src/css/CalendarDays.css
.calendar-days {
  display: flex;
  box-sizing: border-box;
}

.calendar-days-item {
  flex-grow: 1;
  font-size: 1rem;
  color: gray;
}

.calendar-days-item-spacing-day {
  margin: calc(100% - 98%);
  padding: 0.5rem;
  min-height: 38px;
  max-height: 38px;
}

.calendar-days-numbers {
  padding: 2rem;
  flex-grow: 1;
  font-size: 1rem;
  color: gray;
}

.calendar-days-number-color-black {
  color: #f0f0f0;
  border-radius: 5px;
  background-color: #306c34;
}

.calendar-day-months {
  display: flex;
  width: 100%;
  flex-flow: wrap;
}

.calendar-days-numbers {
  flex-grow: 1;
  min-width: 3rem;
  font-size: 1rem;
  color: black;
}

